Canada150: Added scroll to top button. Fixed legal CSS. General: Now showing scroll to top button on mobile.

--- a/wordpress/wp-content/themes/reverie-master/scss/partials/article/top-button.scss
+++ b/wordpress/wp-content/themes/reverie-master/scss/partials/article/top-button.scss
@@ -23,3 +23,14 @@
 		right:12px;
 	}
 }
+
+@media screen and (max-width: 39.9375em) {
+	.article-top-button {
+		opacity: 1 !important;
+		padding-left: 2px;
+
+		.article-top-button-copy {
+			display: none;
+		}
+	}
+}
