--- a/wordpress/wp-content/themes/reverie-master/scss/partials/canada150/divider.scss
+++ b/wordpress/wp-content/themes/reverie-master/scss/partials/canada150/divider.scss
@@ -2,6 +2,7 @@
 	background-color: $white-smoke;
 	border-top: 2px solid $black;
 	padding: 30px 0;
+	margin-bottom: 70px;
 
 	.canada150-divider-title {
 		font-family: $font-family-trim-regular;
@@ -18,6 +19,7 @@
 @media screen and (max-width: 39.9375em) {
 	.canada150-divider {
 			.canada150-divider-body {
+				padding: 0 30px;
 				font-size: 1rem;
 			}
 
