--- a/wordpress/wp-content/themes/reverie-master/scss/partials/canada150/legal.scss
+++ b/wordpress/wp-content/themes/reverie-master/scss/partials/canada150/legal.scss
@@ -7,3 +7,11 @@
 		line-height: 1rem;
 	}
 }
+
+@media screen and (max-width: 39.9375em) {
+	.canada150-legal {
+		p {
+			padding: 0 30px;
+		}
+	}
+}
